--- a/Reporting.Tests/Reporting.Tests.csproj
+++ b/Reporting.Tests/Reporting.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{EE7FE609-42C6-43B8-9215-4130A1E6B95A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReportingSrc.Tests</RootNamespace>
-    <AssemblyName>ReportingSrc.Tests</AssemblyName>
+    <RootNamespace>Reporting.Tests</RootNamespace>
+    <AssemblyName>Reporting.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,22 +30,43 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvReader">
+      <HintPath>..\packages\PerfViewExtensionsLibrary.1.7.0.1\lib\net40\CsvReader.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Diagnostics.FastSerialization">
+      <HintPath>..\packages\PerfViewExtensionsLibrary.1.7.0.1\lib\net40\Microsoft.Diagnostics.FastSerialization.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Diagnostics.Tracing.TraceEvent">
+      <HintPath>..\packages\PerfViewExtensionsLibrary.1.7.0.1\lib\net40\Microsoft.Diagnostics.Tracing.TraceEvent.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="PerfView">
+      <HintPath>..\packages\PerfViewExtensionsLibrary.1.7.0.1\lib\net40\PerfView.exe</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Fakes\FakeEvent.cs" />
+    <Compile Include="Implementations\DiffExtractorTests.cs" />
+    <Compile Include="Fakes\FakeExporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="PerfViewData.etl.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Reporting\Reporting.csproj">
+      <Project>{1BD2D8E1-0720-4806-A44E-5580CB20A552}</Project>
+      <Name>Reporting</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
