--- a/Reporting.Tests/Reporting.Tests.csproj
+++ b/Reporting.Tests/Reporting.Tests.csproj
@@ -51,15 +51,19 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Fakes\FakeEvent.cs" />
     <Compile Include="Fakes\FakeExporter.cs" />
     <Compile Include="Implementations\DiffExtractorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Files.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Files.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="PerfViewData.etl.zip">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <None Include="Resources\PerfViewData.etl">
+      <DependentUpon>Files.resx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +71,12 @@
       <Project>{1BD2D8E1-0720-4806-A44E-5580CB20A552}</Project>
       <Name>Reporting</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Files.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Files.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
