--- a/Reporting/Reporting.csproj
+++ b/Reporting/Reporting.csproj
@@ -67,6 +67,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
@@ -76,6 +77,7 @@
     <Compile Include="Implementations\DiffExtractorArguments.cs" />
     <Compile Include="Implementations\Entities\DataRecord.cs" />
     <Compile Include="Implementations\Entities\Diff.cs" />
+    <Compile Include="Implementations\Entities\DiffCollection.cs" />
     <Compile Include="Implementations\Entities\ProcessData.cs" />
     <Compile Include="Implementations\Entities\ReportRecord.cs" />
     <Compile Include="Implementations\Entities\ThreadData.cs" />
@@ -97,6 +99,7 @@
   <PropertyGroup>
     <PostBuildEvent>xcopy /y "$(TargetPath)" "$(ProjectDir).." &amp;
 xcopy /y "$(ProjectDir)$(OutDir)$(TargetName).xml" "$(ProjectDir).." &amp;
+xcopy /y "$(ProjectDir)$(OutDir)MathNet.Numerics.dll" "$(ProjectDir).." &amp;
 xcopy /y "$(ProjectDir)$(OutDir)DocumentFormat.OpenXml.dll" "$(ProjectDir).."
 </PostBuildEvent>
   </PropertyGroup>
