--- a/Reporting.Tests/Reporting.Tests.csproj
+++ b/Reporting.Tests/Reporting.Tests.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Implementations\ParserTests.cs" />
+    <Compile Include="Implementations\StatsTestResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Viewers\FakeViewer.cs" />
   </ItemGroup>
