--- a/Reporting/Reporting.csproj
+++ b/Reporting/Reporting.csproj
@@ -82,8 +82,10 @@
     <Compile Include="Implementations\ParserArguments.cs" />
     <Compile Include="Viewers\IViewer.cs" />
     <Compile Include="Viewers\Xlsx\BaseSheet.cs" />
+    <Compile Include="Viewers\Xlsx\DataSheet.cs" />
     <Compile Include="Viewers\Xlsx\DiffsSheet.cs" />
     <Compile Include="Viewers\Xlsx\HistogramDataSheet.cs" />
+    <Compile Include="Viewers\Xlsx\HistogramSheet.cs" />
     <Compile Include="Viewers\Xlsx\RawDataSheet.cs" />
     <Compile Include="Viewers\Xlsx\StatSheet.cs" />
   </ItemGroup>
